# RAG_From_Scratch

./: .gitignore  ReadMe.md  Requirements.txt  psychology_of_life.html  pyproject.toml
app/: app.py  main.py
files/: psychology_of_life.html
notebooks/: Rag_test.ipynb
notebooks/files/: psychology_of_life.html
src/: Ingesting_phase.py  LLM_Inference.py  Rag_test.ipynb  Retrival_phase.py  __init__.py  psychology_of_life.html  requirements.txt
src/rag_builder/: Ingesting_phase.py  LLM_Inference.py  Retrival_phase.py
