[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "rag_builder"
version     = "0.1.0"
description = "This package helps you build RAG projects"
authors = [
  { name  = "Gregory Arthur", email = "gregoryarthur98@gmail.com" }
]
dependencies = [
  "beautifulsoup4==4.13.4",
  "cohere==5.15.0",
  "nltk==3.9.1",
  "PyPDF2==3.0.1",
  "python-dotenv==1.1.0",
  "requests==2.32.4",
  "scikit-learn==1.7.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where   = ["src"]
include = ["rag_builder*"]
